<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iv_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="appx_login_animation.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="@dimen/button_and_et_top_margin"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/signup"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/logo_text"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_and_et_top_margin"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/didact_gothic"
            android:hint="@string/username"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorWhite">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_and_et_top_margin"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/til_username_signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/didact_gothic"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorWhite">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mobile_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_and_et_top_margin"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/til_email_signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mobile_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/didact_gothic"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorWhite">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_and_et_top_margin"
        android:theme="@style/TextInputLayoutAppearance"
        app:helperText="@string/passworld_help"
        app:helperTextTextColor="@color/colorDisabled"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/til_mobile_signup"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorWhite">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/didact_gothic"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorWhite">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        style="@style/buttonStyle"
        android:layout_marginTop="@dimen/button_and_et_top_margin"
        android:text="@string/signup"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/til_password_signup" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

</androidx.constraintlayout.widget.ConstraintLayout>